# extract_casosclinicos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  boulder.json  pyproject.toml
0_interfaz_clinical_cases_llmwiki_scaffold/: .gitignore  AGENTS.md  README.md  env.ps1  requirements.txt  setup_windows.ps1
configs/: book.example.yaml
data/: BOOKS_REFERENCE.md  README.md
docs/: clinical_cases_database_schema.md  optional_artifacts.md  recommended_pipeline.md
notebooks/: 1_unified_to_sota_gptoss20b_clean.ipynb  2_explorer_llmwiki_clean.ipynb
reports/: full_book_split_plan.md  section2_split_test.md
schemas/: clinical_case.schema.json
scripts/: analyze_boundary_review_decisions.py  apply_boundary_review_decisions.py  audit_blank_pages.py  audit_case_boundaries.py  audit_digital_pdf_text_layer.py  build_boundary_review_dashboard.py  build_clean_case_pdf_tree.py  build_clinical_cases_bundle.py  build_colab_bundle.py  build_duckdb_bundle.py  clean_generated_artifacts.py  create_clinical_cases_db.py  evaluate_real_subset.py  export_colab_clinical_cases.py  export_colab_from_db.py  extract_case_images.py  extract_split_cases.py  freeze_clean_rebuild_acceptance.py  generate_boundary_decisions_from_rule.py  generate_boundary_decisions_from_rule_v2.py  inspect_duckdb_schema.py  ocr_split_cases.py  smoke_notebook_bundle_inputs.py  smoke_ocrmypdf_synthetic_scan.py  smoke_synthetic_pipeline.py  split_book_from_manifest.py  summarize_ocr_cases.py  validate_colab_notebook_sota_scaffold.py  validate_corrected_boundaries.py  verify_clinical_cases_bundle.py
tests/: conftest.py  test_analyze_boundary_review_decisions.py  test_cli.py  (+19 more)
(+40 files in other folders)
